fixed discover section api call, fixed spacing issue in modal

--- a/client/src/components/book/styles/BookInfo.module.css
+++ b/client/src/components/book/styles/BookInfo.module.css
@@ -1,7 +1,14 @@
 .title {
     font-size: 20px;
+
 }
 
 .author {
     font-size: 16px;
+}
+
+@media (max-width: 420px) {
+    .container {
+        max-width: 190px;
+    }
 }
